--- a/tasks/python.yml
+++ b/tasks/python.yml
@@ -6,6 +6,7 @@
     update_cache: yes 
     cache_valid_time: 600
   with_items:
+    - python-dev
     - python-pip
     - python-virtualenv
     - virtualenv-clone
